# altairexpress

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
altairexpress/: altairexpress.py  fourier_transform.py  hist.py  scatter.py  ts.py  ts_alt.py  ts_alt.py~Stashed changes
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: altairexpress.rst  modules.rst
tests/: test_altairexpress.py  test_fourier.py  test_hist.py  test_scatter.py  test_ts.py
