[tool.poetry]
name = "altairexpress"
version = "0.1.0"
description = "Python package that creates basic EDA graphics in Altair with ease."
authors = ["Lesley <iamthelm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
altair = "^4.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
